@@ -10,7 +10,7 @@ The stepper motors should be connected via a driver IC (like A4988) with a 1, 2 
 	- avr: This must be connected for stepper A to Pin 9 and for Stepper B to Pin 10.
 	- esp32: This can be any output capable port pin.
 	- Step should be done on transition Low to High. High time will be only a few us.
-      On esp32 the high time is fixed to 10us.
+      On esp32 the high time is for slow speed fixed to ~2ms and high speed to 50% duty cycle
 * Direction Signal (optional)
 	- This can be any output capable port pin.
     - Position counting up on direction pin high or low, as per optional parameter to setDirectionPin(). Default is high.
